feat: Add product controller